--- a/public/views/index.handlebars
+++ b/public/views/index.handlebars
@@ -1,30 +1,43 @@
-<h1>Cats!</h1>
-
-<h2>Cats that are not sleepy!</h2>
-
-<ul>
-
-</ul>
-
-<h2>Cats that are sleepy!</h2>
-
-{{!-- <ul> --}}
-
-{{!-- </ul> --}}
-
-<h2>Add a Cat</h2>
-<form class="create-form">
-
-    <div class="form-group">
-        <label for="ca">Cat Name:</label>
-        <input type="text" id="ca" name="name">
+<div class="container">
+    <div class="row">
+        <div class="col-sm-10">
+            <form>
+                <div class="form-group">
+                    {{!-- this is the eamil  --}}
+                    <label for="exampleInputEmail1">Email address</label>
+                    <input type="email" class="form-control" id="username" aria-describedby="emailHelp">
+                    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
+                        else.</small>
+                </div>
+                <div class="form-group">
+                    {{!-- this is the password  --}}
+                    <label for="exampleInputPassword1">Password</label>
+                    <input type="password" class="form-control" id="password">
+                </div>
+                <div class="form-group form-check">
+                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                    <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+        </div>
     </div>
+{{!--     
+    <section id="content">
+        <!-- <form action=""> -->
+        <h1>Login Form</h1>
+        <div>
+            <input type="text" placeholder="Username" required="" id="username" />
+        </div>
+        <div>
+            <input type="password" placeholder="Password" required="" id="password" />
+        </div>
+        <div>
+            <button id="signup-button"> signup </button>
+            <a href="#">Reset your password?</a>
+            <a href="/">Register</a>
+        </div>
+        <!-- </form> -->
 
-    <div class="form-group">
-        <label for="sleepy">Sleepy?</label><br>
-        <input type="radio" name="sleepy" value="1" checked> Sleepy!<br>
-        <input type="radio" name="sleepy" value="0"> Awake
-    </div>
-
-    <button type="submit">Add Cat</button>
-</form>
+    </section> --}}
+</div>
