--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,9 @@
 <div class="container">
     <div class="row">
-        <div class="col-sm-10">
+        <div class="col-sm-12 text-center ">
+            <h1 class="font-weight-bolder" >Tasker Manager </h1>
+        </div>
+        <div class=" offset-3 col-sm-6 mt-4 shadow rounded bg-light p-5 ">
             <form>
                 <div class="form-group">
                     {{!-- this is the eamil  --}}
@@ -14,15 +17,12 @@
                     <label for="exampleInputPassword1">Password</label>
                     <input type="password" class="form-control" id="password">
                 </div>
-                <div class="form-group form-check">
-                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                    <label class="form-check-label" for="exampleCheck1">Check me out</label>
-                </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-outline-primary" id="login"> login </button>
+                <button type="submit" class="btn btn-outline-primary" id="signup-button">signup</button>
             </form>
         </div>
     </div>
-{{!--     
+    {{!--     
     <section id="content">
         <!-- <form action=""> -->
         <h1>Login Form</h1>
