leaving blank for now

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -82,26 +82,9 @@
             <div class="col-12">
                 <h1 class="ml-n3">Other tasks that need to be done!</h1>
                 <div class="row d-flex justify-content-between text-center">
-                    <div
-                        class="col-sm-12 mb-2 col-md-6 border border-info bg-primary font-weight-bold  rounded-lg p-2 pb-3">
-                        <div class="cards">(<span class="day1">task and date</span>)</div>
-                        <!-- this is where the icon will go  -->
-                        <div><img alt="weather icon, check description for details"
-                                src="http://openweathermap.org/img/wn/01n@2x.png" class="img-fluid mt-2 icon1"></div>
-                        <div><span class="description1 descriptionWeight font-weight-light">clear sky</span></div>
-                        <div class="mt-2">Temperature: <span class="temp1">79</span>°F</div>
-                        <div class="mt-2">Humidity : <span class="humidity1">75</span>%</div>
+                    <div class="col-sm-12 mb-2 col-md-6 border border-info bg-primary font-weight-bold  rounded-lg p-2 pb-3">
                     </div>
-                    <div
-                        class="col-sm-12 mb-2 col-md-6 border border-info bg-primary font-weight-bold  rounded-lg p-2 pb-3">
-                        <div class="cards">(<span class="day2">task and date</span>)</div>
-                        <!-- this is where the icon will go  -->
-                        <div><img alt="weather icon, check description for details"
-                                src="http://openweathermap.org/img/wn/02d@2x.png" class="img-fluid mt-2 icon2"></div>
-                        <div><span class="description2 descriptionWeight font-weight-light">few clouds</span></div>
-                        <div class="mt-2">Temperature: <span class="temp2">77</span>°F</div>
-                        <div class="mt-2">Humidity : <span class="humidity2">82</span>%</div>
-                    </div>
+                   
                 </div>
             </div>
         </div>
