--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -83,8 +83,8 @@
                 <h1 class="ml-n3">Other tasks that need to be done!</h1>
                 <div class="row d-flex justify-content-between text-center">
                     <div class="col-sm-12 mb-2 col-md-6 border border-info bg-primary font-weight-bold  rounded-lg p-2 pb-3">
+                    one task
                     </div>
-                   
                 </div>
             </div>
         </div>
