--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -69,7 +69,7 @@
                                         class="img-fluid mt-2 icon1 rounded border border-warning"><span
                                         class="description0">clear sky</span>
                                 </div>
-                                <div class="mt-3">Email : <span class="wind">10.5</span> MPH</div>
+                                <div class="mt-3">Email : <span class="employee-name"></span></div>
                                 <div class="mt-3">name : <span class="humidity0">64</span>%</div>
                                 <div class="mt-3">Role : <span class="temp0">81</span>°F</div>
                                 <div class="mt-3">Department : <span class="temp0">81</span>°F</div>
