--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,7 +4,7 @@
             <h1 class="font-weight-bolder" >Tasker Manager </h1>
         </div>
         <div class=" offset-3 col-sm-6 mt-4 shadow rounded bg-light p-5 ">
-            <form>
+            <form class="login" >
                 <div class="form-group">
                     {{!-- this is the eamil  --}}
                     <label for="exampleInputEmail1">Email address</label>
@@ -19,6 +19,7 @@
                 </div>
                 <button type="submit" class="btn btn-outline-primary" id="login"> login </button>
                 <button type="submit" class="btn btn-outline-primary" id="signup-button">signup</button>
+                <p class="text-danger errMsg"></p>
             </form>
         </div>
     </div>
