added dynamic avatar to the each user

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -65,8 +65,8 @@
                                         see</span> (<span class="day0">8/07/20</span>)</h1>
                                 <div>this will show a picture of the user if we have time </div>
                                 {{!-- the icon class gives use the pictures we need for this  --}}
-                                <div><img src="http://openweathermap.org/img/wn/01n@2x.png" alt="weather Icon"
-                                        class="img-fluid mt-2 icon1 rounded border border-warning"><span
+                                <div><img src="" alt="weather Icon"
+                                        class="img-fluid mt-2 icon rounded border border-warning"><span
                                         class="description0">clear sky</span>
                                 </div>
                                 <div class="mt-3">Email : <span class="employee-name"></span></div>
