--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,7 +3,7 @@
         <div class="col-sm-12 text-center ">
             <h1 class="font-weight-bolder" >Tasker Manager </h1>
         </div>
-        <div class=" offset-3 col-sm-6 mt-4 shadow rounded bg-light p-5 ">
+        <div class=" offset-1 col-10 offset-md-3 col-md-6  mt-4 shadow rounded bg-light p-5 ">
             <form class="login" >
                 <div class="form-group">
                     {{!-- this is the eamil  --}}
