--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,44 +1,29 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-12 text-center ">
-            <h1 class="font-weight-bolder" >Tasker Manager </h1>
+            <h1 class="font-weight-bolder">Tasker Manager </h1>
         </div>
-        <div class=" offset-1 col-10 offset-md-3 col-md-6  mt-4 shadow rounded bg-light p-5 ">
-            <form class="login" >
+        <div class=" offset-1 col-10 offset-md-3 col-md-6  mt-4 shadow rounded bg-primary p-5 text-white ">
+            <form class="login">
                 <div class="form-group">
                     {{!-- this is the eamil  --}}
                     <label for="exampleInputEmail1">Email address</label>
-                    <input type="email" class="form-control" id="username" aria-describedby="emailHelp">
-                    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
+                    <input type="email" placeholder="Enter your email address....." class="form-control" id="username"
+                        aria-describedby="emailHelp">
+                    <small id="emailHelp" class="form-text text-white ">We'll never share your email with anyone
                         else.</small>
                 </div>
                 <div class="form-group">
                     {{!-- this is the password  --}}
                     <label for="exampleInputPassword1">Password</label>
-                    <input type="password" class="form-control" id="password">
+                    <input type="password" placeholder="Enter your password....." class="form-control" id="password">
                 </div>
-                <button type="submit" class="btn btn-outline-primary" id="login"> login </button>
-                <button type="submit" class="btn btn-outline-primary" id="signup-button">signup</button>
-                <p class="text-danger errMsg"></p>
+                <div>
+                    <button type="submit" class="btn btn-outline-success" id="login"> login </button>
+                    <button type="submit" class="btn btn-outline-success" id="signup-button">signup</button>
+                    <p class="text-danger errMsg"></p>
+                </div>
             </form>
         </div>
     </div>
-    {{!--     
-    <section id="content">
-        <!-- <form action=""> -->
-        <h1>Login Form</h1>
-        <div>
-            <input type="text" placeholder="Username" required="" id="username" />
-        </div>
-        <div>
-            <input type="password" placeholder="Password" required="" id="password" />
-        </div>
-        <div>
-            <button id="signup-button"> signup </button>
-            <a href="#">Reset your password?</a>
-            <a href="/">Register</a>
-        </div>
-        <!-- </form> -->
-
-    </section> --}}
 </div>
