pulling task for the user so they can see their tasks and also update once they submit a new one

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -60,7 +60,7 @@
             <div class="row ">
                 <!-- create a task and maybe throw in search a task later -->
                 <div class="col-12">
-                    <h4 class="font-weight-bold">Create a Tasks: <span id="taskCreatedAlert"></span> </h4>
+                    <h4 class="font-weight-bold">Tasks: <span id="taskCreatedAlert"></span> </h4>
                     <div class="input-group input-group-lg ">
                         <input class="form-control  input-group-lg border border-primary" id="cityInputValue"
                             type="search" placeholder="What are we doing today..." aria-label="Search">
