--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -14,7 +14,7 @@
 
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0  text-white " type="submit">Search</button>
+                <button class="btn btn-outline-success my-2 my-sm-0  text-white " type="submit" id="searchDirectory">Search</button>
                 <button class="btn btn-outline-success my-3 ml-2 my-sm-0 text-white logOut text">Log Out</button>
             </form>
 
