--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -36,11 +36,13 @@
                             <div><img src="" alt="weather Icon" class=" icon rounded border "></div>
                         </div>
                         <div class="col-4">
-                            <h4 class="font-weight-bold">Welcome <span class="employee-name"></span>!! </h4>
+                            <h4 class="font-weight-bold text-white">Welcome <span class="employee-name"></span>!! </h4>
                         </div>
                         <div class="col-12 mt-2">
                             <ul class="list-group text-white">
                                 <div class="list-group-item bg-transparent ">Email : <span class="employee-name"></span>
+                                </div>
+                                <div class="list-group-item bg-transparent ">id : <span class="employee-id"></span>
                                 </div>
                                 <div class="list-group-item bg-transparent ">name : <span class="humidity0"></span>
                                 </div>
@@ -81,12 +83,12 @@
             </div>
         </div>
 
-        <div class="col-12 col-lg-9 mt-3">
+        <div class="col-12 offset-lg-1 col-lg-10 mt-3">
             <!-- create a task  -->
             <div class="row">
                 <div class="col-12">
                     <h1 class="ml-n3 display-5 ">Tasks to be done!</h1>
-                    <div class="row d-flex justify-content-between text-center">
+                    <div class="row d-flex justify-content-between text-center tasks">
                         <div
                             class="col-sm-12 mb-2 col-md-6 border border-info bg-primary font-weight-bold  rounded-lg p-2 pb-3">
                             one task
