--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,7 +16,7 @@
     <script src="/assets/js/login.js"></script>
 
 
-    <title>Hello, world!</title>
+    <title>Tasker</title>
 </head>
 
 <body class="bg-info">
@@ -34,6 +34,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
         crossorigin="anonymous"></script>
+        <script src="http://www.parsecdn.com/js/parse-1.4.2.min.js"></script>
 </body>
 
 </html>
