--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -46,8 +46,7 @@
                                     <button type="submit" class="btn btn-primary mb-2" id="updateName">Update Name</button>
                                 </div>
                                 
-                                <div class="list-group-item bg-transparent ">Role : 
-                                    <p id="employee-role"></p>
+                                <div class="list-group-item bg-transparent ">Role : <p class="employee-role"></p>
                                     <input type="text" name="role" placeholder="Enter Role">
                                     <button type="submit" class="btn btn-primary mb-2" id="updateRole">Update Role</button>
                                 </div>
@@ -111,3 +110,4 @@
     <script src="/assets/js/directory.js"></script>
     <script src="/assets/js/employeePage.js"></script>
     <script src="/assets/js/createTask.js"></script>
+    <script src="/assets/js/logout.js"></script>
