--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -27,7 +27,7 @@
     <div class="row">
 
         <!-- PIC && STATS  -->
-        <div class="col-12 col-lg-9 mt-3">
+        <div class="col-12 col-lg-9 mt-3" id="profile">
             <div class="row">
                 {{!-- stats && avatar--}}
                 <div class="col-12 bg-secondary p-3 rounded font-weight-bold ">
@@ -65,7 +65,7 @@
 
         <!-- SEARCH BAR-->
         <div class="col-12 col-lg-3 mt-3">
-            <div class="row px-3">
+            <div class="row p-3">
                 <!-- create a task and maybe throw in search a task later -->
                 <div class="col-12 bg-secondary p-3 rounded font-weight-bold">
                     <h4 class="font-weight-bold">Tasks: <span id="taskCreatedAlert"></span> </h4>
@@ -93,7 +93,7 @@
         </div>
 
         <div class="col-lg-9 mt-3">
-            <h1 class="p-2 bg-primary text-white">Tasks to be done!</h1>
+            <h1 class="p-2 bg-primary rounded text-white">Tasks to be done!</h1>
             <!-- create a task  -->
             <div class="row">
                 <div class="col-12">
